29-01-2005 encoded <encoded@xmtp.net>
	* src/preferences.c     Check version before adding support for
	* glade/gmpc.glade	(dis|en)abling outputs.
28-01-2005 encoded <encoded@xmtp.net>
	* src/preferences.c     Added support for (dis|en)abling outputs.
	* glade/gmpc.glade
28-01-2005 Qball:
	* src/libmpdclient.c:	Fixed not-initialized pointer.
	* src/player.c:		Moved more to libmpd
01-19-2005 avuton <avuton@gmail.com>
	* src/playlist3.c       Inadvertantly removed playlist saving ability
	* glade/playlist3.glade when I removed playlist.glade on the 10th,
	* glade/playlist3.glade move it to playlist3.glade
01-19-2005 avuton <avuton@gmail.com>
	* src/libmpdclient.c:   Update libmpdclient.c so it will be able to
	* src/libmpdclient.c:   compile in cygwin
01-10-2005 avuton <avuton@gmail.com>
	* glade/gmpc.glade:     Remove 'update' from 'Server settings' menu
	* src/playlist3.c:      Add 'update' to 'Browse Filesystem' menu in
	* src/playlist3.c:      pl3, made it work incrementally
	* src/preferences.c:    Spelling Fixes
	* glade/gmpc.glade.bak  Removed (not needed)
	* glade/gmpc.gladep.bak Removed (not needed)
	* glade/playlist.glade  Removed (not needed)
01-04-2005 avuton <avuton@gmail.com>
	* glade/playlist3:      Fix pl3 icon
	* src/callback.c:       Fix spelling mistakes
	  src/player.c:         Fix spelling mistakes
05-11-2004 Qball <Qball@qballcow.nl>
	* src/tray-icon.c:	Fixed location of popup.
				Mouse over tray will always make the popup
				appear above/below the tray.

24-11-2004 Qball <Qball@qballcow.nl>
	* src/player.c:		pop/push popup msg is now stack based.
	* src/playlist3.c:	position is (in session) saved and restored.
	* src/playlist3.c: 	Push/pop messages are now popped off in the
	right order.
	* src/playlist3.c:	Added ctrl-insert = replace

13-11-2004 Qball <Qball@qballcow.nl>
	* src/playlist3.c:	Allow the playlist to be reordered
	* src/playlist3.c:	Binded I to information about song.

10-11-2004 Qball <Qball@qballcow.nl>